Lexer/unam.fi.compilers.g5.07/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    DM
    EQ
    IM
    LITERAL
    NEQ
    OR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> KEYWORDS IDENTIFIER PUNCTUATION PUNCTUATION bloque
Rule 2     bloque -> PUNCTUATION declaraciones PUNCTUATION
Rule 3     declaraciones -> declaraciones declaracion
Rule 4     declaraciones -> declaracion
Rule 5     declaracion -> KEYWORDS IDENTIFIER PUNCTUATION
Rule 6     declaracion -> IDENTIFIER ASIGN expresion PUNCTUATION
Rule 7     expresion -> expresion MAS expresion
Rule 8     expresion -> expresion MENOS expresion
Rule 9     expresion -> expresion MULT expresion
Rule 10    expresion -> expresion DIVISION expresion
Rule 11    expresion -> CONSTANT
Rule 12    expresion -> IDENTIFIER

Terminals, with rules where they appear

AND                  : 
ASIGN                : 6
CONSTANT             : 11
DIVISION             : 10
DM                   : 
EQ                   : 
IDENTIFIER           : 1 5 6 12
IM                   : 
KEYWORDS             : 1 5
LITERAL              : 
MAS                  : 7
MENOS                : 8
MULT                 : 9
NEQ                  : 
OR                   : 
PUNCTUATION          : 1 1 2 2 5 6
error                : 

Nonterminals, with rules where they appear

bloque               : 1
declaracion          : 3 4
declaraciones        : 2 3
expresion            : 6 7 7 8 8 9 9 10 10
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . KEYWORDS IDENTIFIER PUNCTUATION PUNCTUATION bloque

    KEYWORDS        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> KEYWORDS . IDENTIFIER PUNCTUATION PUNCTUATION bloque

    IDENTIFIER      shift and go to state 3


state 3

    (1) programa -> KEYWORDS IDENTIFIER . PUNCTUATION PUNCTUATION bloque

    PUNCTUATION     shift and go to state 4


state 4

    (1) programa -> KEYWORDS IDENTIFIER PUNCTUATION . PUNCTUATION bloque

    PUNCTUATION     shift and go to state 5


state 5

    (1) programa -> KEYWORDS IDENTIFIER PUNCTUATION PUNCTUATION . bloque
    (2) bloque -> . PUNCTUATION declaraciones PUNCTUATION

    PUNCTUATION     shift and go to state 6

    bloque                         shift and go to state 7

state 6

    (2) bloque -> PUNCTUATION . declaraciones PUNCTUATION
    (3) declaraciones -> . declaraciones declaracion
    (4) declaraciones -> . declaracion
    (5) declaracion -> . KEYWORDS IDENTIFIER PUNCTUATION
    (6) declaracion -> . IDENTIFIER ASIGN expresion PUNCTUATION

    KEYWORDS        shift and go to state 10
    IDENTIFIER      shift and go to state 11

    declaraciones                  shift and go to state 8
    declaracion                    shift and go to state 9

state 7

    (1) programa -> KEYWORDS IDENTIFIER PUNCTUATION PUNCTUATION bloque .

    $end            reduce using rule 1 (programa -> KEYWORDS IDENTIFIER PUNCTUATION PUNCTUATION bloque .)


state 8

    (2) bloque -> PUNCTUATION declaraciones . PUNCTUATION
    (3) declaraciones -> declaraciones . declaracion
    (5) declaracion -> . KEYWORDS IDENTIFIER PUNCTUATION
    (6) declaracion -> . IDENTIFIER ASIGN expresion PUNCTUATION

    PUNCTUATION     shift and go to state 12
    KEYWORDS        shift and go to state 10
    IDENTIFIER      shift and go to state 11

    declaracion                    shift and go to state 13

state 9

    (4) declaraciones -> declaracion .

    PUNCTUATION     reduce using rule 4 (declaraciones -> declaracion .)
    KEYWORDS        reduce using rule 4 (declaraciones -> declaracion .)
    IDENTIFIER      reduce using rule 4 (declaraciones -> declaracion .)


state 10

    (5) declaracion -> KEYWORDS . IDENTIFIER PUNCTUATION

    IDENTIFIER      shift and go to state 14


state 11

    (6) declaracion -> IDENTIFIER . ASIGN expresion PUNCTUATION

    ASIGN           shift and go to state 15


state 12

    (2) bloque -> PUNCTUATION declaraciones PUNCTUATION .

    $end            reduce using rule 2 (bloque -> PUNCTUATION declaraciones PUNCTUATION .)


state 13

    (3) declaraciones -> declaraciones declaracion .

    PUNCTUATION     reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    KEYWORDS        reduce using rule 3 (declaraciones -> declaraciones declaracion .)
    IDENTIFIER      reduce using rule 3 (declaraciones -> declaraciones declaracion .)


state 14

    (5) declaracion -> KEYWORDS IDENTIFIER . PUNCTUATION

    PUNCTUATION     shift and go to state 16


state 15

    (6) declaracion -> IDENTIFIER ASIGN . expresion PUNCTUATION
    (7) expresion -> . expresion MAS expresion
    (8) expresion -> . expresion MENOS expresion
    (9) expresion -> . expresion MULT expresion
    (10) expresion -> . expresion DIVISION expresion
    (11) expresion -> . CONSTANT
    (12) expresion -> . IDENTIFIER

    CONSTANT        shift and go to state 19
    IDENTIFIER      shift and go to state 17

    expresion                      shift and go to state 18

state 16

    (5) declaracion -> KEYWORDS IDENTIFIER PUNCTUATION .

    PUNCTUATION     reduce using rule 5 (declaracion -> KEYWORDS IDENTIFIER PUNCTUATION .)
    KEYWORDS        reduce using rule 5 (declaracion -> KEYWORDS IDENTIFIER PUNCTUATION .)
    IDENTIFIER      reduce using rule 5 (declaracion -> KEYWORDS IDENTIFIER PUNCTUATION .)


state 17

    (12) expresion -> IDENTIFIER .

    PUNCTUATION     reduce using rule 12 (expresion -> IDENTIFIER .)
    MAS             reduce using rule 12 (expresion -> IDENTIFIER .)
    MENOS           reduce using rule 12 (expresion -> IDENTIFIER .)
    MULT            reduce using rule 12 (expresion -> IDENTIFIER .)
    DIVISION        reduce using rule 12 (expresion -> IDENTIFIER .)


state 18

    (6) declaracion -> IDENTIFIER ASIGN expresion . PUNCTUATION
    (7) expresion -> expresion . MAS expresion
    (8) expresion -> expresion . MENOS expresion
    (9) expresion -> expresion . MULT expresion
    (10) expresion -> expresion . DIVISION expresion

    PUNCTUATION     shift and go to state 20
    MAS             shift and go to state 21
    MENOS           shift and go to state 22
    MULT            shift and go to state 23
    DIVISION        shift and go to state 24


state 19

    (11) expresion -> CONSTANT .

    PUNCTUATION     reduce using rule 11 (expresion -> CONSTANT .)
    MAS             reduce using rule 11 (expresion -> CONSTANT .)
    MENOS           reduce using rule 11 (expresion -> CONSTANT .)
    MULT            reduce using rule 11 (expresion -> CONSTANT .)
    DIVISION        reduce using rule 11 (expresion -> CONSTANT .)


state 20

    (6) declaracion -> IDENTIFIER ASIGN expresion PUNCTUATION .

    PUNCTUATION     reduce using rule 6 (declaracion -> IDENTIFIER ASIGN expresion PUNCTUATION .)
    KEYWORDS        reduce using rule 6 (declaracion -> IDENTIFIER ASIGN expresion PUNCTUATION .)
    IDENTIFIER      reduce using rule 6 (declaracion -> IDENTIFIER ASIGN expresion PUNCTUATION .)


state 21

    (7) expresion -> expresion MAS . expresion
    (7) expresion -> . expresion MAS expresion
    (8) expresion -> . expresion MENOS expresion
    (9) expresion -> . expresion MULT expresion
    (10) expresion -> . expresion DIVISION expresion
    (11) expresion -> . CONSTANT
    (12) expresion -> . IDENTIFIER

    CONSTANT        shift and go to state 19
    IDENTIFIER      shift and go to state 17

    expresion                      shift and go to state 25

state 22

    (8) expresion -> expresion MENOS . expresion
    (7) expresion -> . expresion MAS expresion
    (8) expresion -> . expresion MENOS expresion
    (9) expresion -> . expresion MULT expresion
    (10) expresion -> . expresion DIVISION expresion
    (11) expresion -> . CONSTANT
    (12) expresion -> . IDENTIFIER

    CONSTANT        shift and go to state 19
    IDENTIFIER      shift and go to state 17

    expresion                      shift and go to state 26

state 23

    (9) expresion -> expresion MULT . expresion
    (7) expresion -> . expresion MAS expresion
    (8) expresion -> . expresion MENOS expresion
    (9) expresion -> . expresion MULT expresion
    (10) expresion -> . expresion DIVISION expresion
    (11) expresion -> . CONSTANT
    (12) expresion -> . IDENTIFIER

    CONSTANT        shift and go to state 19
    IDENTIFIER      shift and go to state 17

    expresion                      shift and go to state 27

state 24

    (10) expresion -> expresion DIVISION . expresion
    (7) expresion -> . expresion MAS expresion
    (8) expresion -> . expresion MENOS expresion
    (9) expresion -> . expresion MULT expresion
    (10) expresion -> . expresion DIVISION expresion
    (11) expresion -> . CONSTANT
    (12) expresion -> . IDENTIFIER

    CONSTANT        shift and go to state 19
    IDENTIFIER      shift and go to state 17

    expresion                      shift and go to state 28

state 25

    (7) expresion -> expresion MAS expresion .
    (7) expresion -> expresion . MAS expresion
    (8) expresion -> expresion . MENOS expresion
    (9) expresion -> expresion . MULT expresion
    (10) expresion -> expresion . DIVISION expresion

    PUNCTUATION     reduce using rule 7 (expresion -> expresion MAS expresion .)
    MAS             reduce using rule 7 (expresion -> expresion MAS expresion .)
    MENOS           reduce using rule 7 (expresion -> expresion MAS expresion .)
    MULT            shift and go to state 23
    DIVISION        shift and go to state 24

  ! MULT            [ reduce using rule 7 (expresion -> expresion MAS expresion .) ]
  ! DIVISION        [ reduce using rule 7 (expresion -> expresion MAS expresion .) ]
  ! MAS             [ shift and go to state 21 ]
  ! MENOS           [ shift and go to state 22 ]


state 26

    (8) expresion -> expresion MENOS expresion .
    (7) expresion -> expresion . MAS expresion
    (8) expresion -> expresion . MENOS expresion
    (9) expresion -> expresion . MULT expresion
    (10) expresion -> expresion . DIVISION expresion

    PUNCTUATION     reduce using rule 8 (expresion -> expresion MENOS expresion .)
    MAS             reduce using rule 8 (expresion -> expresion MENOS expresion .)
    MENOS           reduce using rule 8 (expresion -> expresion MENOS expresion .)
    MULT            shift and go to state 23
    DIVISION        shift and go to state 24

  ! MULT            [ reduce using rule 8 (expresion -> expresion MENOS expresion .) ]
  ! DIVISION        [ reduce using rule 8 (expresion -> expresion MENOS expresion .) ]
  ! MAS             [ shift and go to state 21 ]
  ! MENOS           [ shift and go to state 22 ]


state 27

    (9) expresion -> expresion MULT expresion .
    (7) expresion -> expresion . MAS expresion
    (8) expresion -> expresion . MENOS expresion
    (9) expresion -> expresion . MULT expresion
    (10) expresion -> expresion . DIVISION expresion

    PUNCTUATION     reduce using rule 9 (expresion -> expresion MULT expresion .)
    MAS             reduce using rule 9 (expresion -> expresion MULT expresion .)
    MENOS           reduce using rule 9 (expresion -> expresion MULT expresion .)
    MULT            reduce using rule 9 (expresion -> expresion MULT expresion .)
    DIVISION        reduce using rule 9 (expresion -> expresion MULT expresion .)

  ! MAS             [ shift and go to state 21 ]
  ! MENOS           [ shift and go to state 22 ]
  ! MULT            [ shift and go to state 23 ]
  ! DIVISION        [ shift and go to state 24 ]


state 28

    (10) expresion -> expresion DIVISION expresion .
    (7) expresion -> expresion . MAS expresion
    (8) expresion -> expresion . MENOS expresion
    (9) expresion -> expresion . MULT expresion
    (10) expresion -> expresion . DIVISION expresion

    PUNCTUATION     reduce using rule 10 (expresion -> expresion DIVISION expresion .)
    MAS             reduce using rule 10 (expresion -> expresion DIVISION expresion .)
    MENOS           reduce using rule 10 (expresion -> expresion DIVISION expresion .)
    MULT            reduce using rule 10 (expresion -> expresion DIVISION expresion .)
    DIVISION        reduce using rule 10 (expresion -> expresion DIVISION expresion .)

  ! MAS             [ shift and go to state 21 ]
  ! MENOS           [ shift and go to state 22 ]
  ! MULT            [ shift and go to state 23 ]
  ! DIVISION        [ shift and go to state 24 ]

